--- a/css/scss/_icons.scss
+++ b/css/scss/_icons.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'IcoMoon-Free';
-	src: url('../IcoMoon-Free.ttf?-b7qzp2') format('truetype');
+	src: url('../fonts/IcoMoon-Free.ttf?-b7qzp2') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
