--- a/css/scss/main-styles.scss
+++ b/css/scss/main-styles.scss
@@ -9,6 +9,7 @@
 
 /******** Typography ********/
 .orange {color: $orange;}
+.blue {color: $blue;}
 p.bigger {font-size: 24px; font-family: $proxima; margin-bottom: 20px;}
 
 /******** Header ********/
@@ -231,8 +232,8 @@ input[type=checkbox]:checked ~ #menu{
     & h1 {color: $green; margin-bottom: 45px;}
     & h1 .sub-head {font-size: .7em; line-height: .7em;}
 }
-.pull-right.inline-img {max-width: 260px; height: auto; margin: 7px 0 7px 15px; border: 5px solid #ddd;}
-.pull-left.inline-img {max-width: 260px; height: auto; margin: 7px 15px 7px 0; border: 5px solid #ddd;}
+.pull-right.inline-img {max-width: 260px; height: auto; margin: 7px 0 7px 15px; border: 4px solid #ccc;}
+.pull-left.inline-img {max-width: 260px; height: auto; margin: 7px 15px 7px 0; border: 4px solid #ccc;}
 
 /******** Key Dates Section ********/
 .key-dates-section {background: $light-blue url(../img/key-dates-bg.jpg) top right; background-size: cover; background-attachment: fixed;
@@ -243,7 +244,7 @@ input[type=checkbox]:checked ~ #menu{
 table.key-dates td, table.key-dates th {padding-left: 10px;}
 
 /******** Apply Section ********/
-.apply-section {background: #fff; padding-top: 0; border-top: 6px solid #fff;}
+.apply-section {background: transparent url(../img/about-bg-2.png) repeat; padding-top: 0; border-top: 6px solid #fff;}
 .apply-header {background: #fff url(../img/apply-head-bg-orange.jpg) center top no-repeat; padding-top: 80px; height: 310px; margin-bottom: 15px;
     & h1 {color: #fff; font-size: 5em; line-height: .8em; text-shadow: 2px 2px 0px #792d26;}
 }
@@ -262,7 +263,7 @@ a.application-button {background-color: #343434; border: 3px solid $light-orange
 }
 
 /******** FAQ Page ********/
-.faq-page {background: transparent url(../img/about-bg-2.png) repeat; padding-bottom: 30px;}
+.faq-page {background-color: #fff; padding-bottom: 30px; font-size: 16px;}
 .faq-head {background-color: $orange; padding-top: 25px;
     & h1 {color: #fff; font-size: 4em; text-shadow: none;}
 }
@@ -288,10 +289,10 @@ footer {width: 100%; background-color: $orange; color: #fff; font-size: 16px; pa
 @media screen and (max-width: 490px) {
       .jumbotron h1, .jumbotron .h1 {font-size: 3em;}
       .jumbotron h2 {font-size: 1.3em;}
-	  .pull-right.inline-img, .pull-left.inline-img {max-width: 100%; float:none !important;}
+	  img.pull-right, img.pull-left, .pull-right.inline-img, .pull-left.inline-img {max-width: 100%; float:none !important; display: table; margin: 10px auto;}
   }
 @media screen and (max-width: 386px) {
-      .jumbotron h1, .jumbotron .h1 {font-size: 2.5em;}
+      .jumbotron h1, .jumbotron .h1 {font-size: 3em;}
 }
 
 /******** Responsive Table ********/
