--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -11,10 +11,12 @@
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%;
+  height: 100%; }
 
 body {
-  margin: 0; }
+  margin: 0;
+  height: 100%; }
 
 article,
 aside,
@@ -4370,7 +4372,7 @@ p.bigger {
   background: transparent url(../img/main-head-bg.jpg) bottom center no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 100%;
+  min-height: 100%;
   max-width: 100%; }
 
 .demSum {
